# adaptive-ai-interview

./: .gitignore  README.md  docker-compose.yml  implementation_plan.md  implementation_plan.md.resolved  package-lock.json  task.md  tutorial-question-16.07.2026.ipynb
backend/: .env.example  .gitignore  generate_seed.py  pyproject.toml
backend/ai_models/knowledge_tracing/: bkt.py  dkt.py  factory.py  gnn.py  train_dkt.py
backend/alembic/: env.py
backend/alembic/versions/: 7c74126d10fb_create_questions_table.py  8b98347e30fc_create_users_table.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  embeddings.py  llm_client.py  rag_engine.py
backend/app/ai/prompts/: __init__.py  answer_eval.py  question_gen.py
backend/app/api/v1/: __init__.py  answers.py  auth.py  dashboard.py  health.py  interview.py  questions.py  session.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: chroma_client.py  neo4j_client.py  postgres.py  redis_client.py
backend/app/models/: __init__.py  answer.py  base.py  candidate.py  dashboard.py  health.py  question.py  session.py  user.py
backend/app/services/: adaptive_selector.py  answer_analyzer.py  ast_analyzer.py  dashboard_service.py  question_engine.py  session_service.py  skill_graph.py
backend/checkpoints/: dkt_model.pt
backend/data/questions/: seed_questions.json
backend/scripts/: seed_questions.py
backend/tests/: __init__.py  test_adaptive_selector.py  test_answer_analyzer.py  test_ast_analyzer.py  test_auth.py  test_bkt.py  test_dashboard_api.py  test_dkt.py  test_embeddings.py  test_factory.py  test_gnn.py  test_health.py  test_interview_api.py  test_llm_client.py  test_neo4j.py  test_questions.py  test_rag_engine.py  test_session.py  test_skill_graph.py
docs/ADR/: ADR-001-fastapi-over-flask.md  ADR-002-redis-for-sessions.md  ADR-003-neo4j-for-graph.md  ADR-004-graph-rag-over-vector-rag.md  ADR-005-pytorch-over-tensorflow.md  ADR-006-dkt-over-bkt.md  ADR-007-gnn-for-competency.md  README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/interview/: page.tsx
frontend/src/components/chat/: ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx
frontend/src/components/dashboard/: CandidateCodeMapGraph.tsx  CandidateCodeMapGraphCanvas.tsx  GraphPlaceholder.tsx  GraphPlaceholderCanvas.tsx
frontend/src/components/editor/: CodeEditor.tsx
frontend/src/components/layout/: Header.tsx  InterviewLayout.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  LoadingSpinner.tsx  StartInterviewButton.tsx
frontend/src/lib/: api.ts  dashboardApi.ts  interview-context.tsx  theme-context.tsx  types.ts
notebooks/: README.md
notebooks/03_dkt_prototype/: 01_dkt_training.ipynb
notebooks/04_gnn_prototype/: 01_gnn_training.ipynb
research/: README.md
research/benchmarks/: README.md
research/datasets/: README.md
research/experiments/: README.md
research/experiments/E001_kt_comparison/: E001_bkt_baseline.md  E001_results.md  run_e001_experiment.py
research/papers/: README.md
