[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-ai-interview-backend"
version = "0.1.0"
description = "Adaptive AI Interview Assistant — FastAPI Backend"
requires-python = ">=3.12"

dependencies = [
    # ── Web Framework ──────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # ── Configuration ──────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.1.0",
    "itsdangerous>=2.1.0",

    # ── Logging ────────────────────────────────────────────────────
    "structlog>=24.2.0",

    # ── HTTP Client ────────────────────────────────────────────────
    "httpx>=0.27.0",

    # ── Cache / Session Store ──────────────────────────────────────
    "redis>=5.0.0",

    # ── Database ───────────────────────────────────────────────────
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # ── Authentication ─────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.1",
    "python-multipart>=0.0.9",
    
    # ── AI / LLM ───────────────────────────────────────────────────
    "google-generativeai>=0.8.0",

    # ── Graph Modeling ──────────────────────────────────────────────
    "networkx>=3.0",
    "neo4j>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    # ── Test doubles ───────────────────────────────────────────────
    "fakeredis>=2.23.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
